tests/NormalTests/paczka1/fuzzy1/44135481.err
Error in line 12: 9dcry2DtyYA S876 89,2
Error in line 15: hh2Km A119 51,5
Error in line 18: ZzQSgDb A11- 8-,-
Error in line 9: ZzQSgDb A119 20,3
Error in line 17: hh2Km S876 44,4
Error in line 20: ZzQSgDb S876 33,0
Error in line 36: 9dcry2DtyYA A25v 253,1
Error in line 37: hh2Km S876 1,54
